--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "ask-sdk": "^2.5.2",
     "ask-sdk-core": "^2.5.2"
+  },
+  "devDependencies": {
+    "alexa-skill-local": "^1.3.0"
   }
 }
